--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    color: #333;
+    background: #1e1f24;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -13,6 +13,25 @@ body {
 }
 
 .container h1 {
-    font-size: 20px;
+    font-size: 24px;
     text-align: center;
+    color: #555;
+}
+
+#cabecera {
+    color: #ccc;
+    font-size: 30px;
+    background: #8d3482;
+    padding: 10px;
+    margin: 0px;
+}
+
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
+
+#post {
+    background: white;
+    padding: 1em;
 }
