--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,3 +16,10 @@ body {
     font-size: 20px;
     text-align: center;
 }
+
+#footer {
+    background: #ccc;
+    padding: 10px;
+    margin: 0px;
+    text-align: center;
+}
